--- a/thi_thuc_hanh/bai3.html
+++ b/thi_thuc_hanh/bai3.html
@@ -31,7 +31,7 @@
 
         return primeNumbers;
     }
-    let inputArray = [1, 5, 13, 6, 23, 8, 47, 11, 3];
+    let inputArray = [1, 5, 6, 23, 8, 47, 10, 3];
     let result = timSoNguyenTo(inputArray);
     alert(result);
 </script>
